<resources>
    <string name="app_name">Ready2Board</string>
    <string name="forgot">Forgot Password?</string>
    <string name="forgot_pass">Forgot Password</string>
    <string name="set_location">Set Location</string>
    <string name="change_pass">Change Password</string>
    <string name="username">Email ID/username</string>
    <string name="email">Email ID</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="send">Send</string>
    <string name="submit">Save</string>
    <string name="save">Save</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="parent">parent</string>
    <string name="driver">driver</string>
    <string name="route">Route View</string>
    <string name="map">Map</string>
    <string name="end_trip">End Trip</string>
    <string name="set_loc">Set Location</string>
    <string name="schoolbell">SCHOOL BELL</string>
    <string name="profile">Profile</string>
    <string name="notification">Notifications</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="clearAll">CLEAR ALL</string>
    <string name="no_notification">No Notification</string>
    <string name="google_maps_key">AIzaSyCPsqvzHIqZPFDEz9pHEg1K4ftp3momBsQ</string>
    <string name="google_matrix_key">AIzaSyD6OGSdko-75JksEz_ZPFLqXopDazkSx_w</string>
    <string name="google_geo_key">AIzaSyCwjJOLuhiuwi3faNPO4xT-f3FgCGP3A38</string>
    <string name="input_error">Enter Username</string>
    <string name="input_phone">Enter Phone</string>
    <string name="input_password">Enter Password</string>
    <string name="valid_email">Enter valid email</string>
    <string name="enter_userid">Enter user id</string>
    <string name="enter_old">Enter old password</string>
    <string name="enter_new_pass">Enter new password</string>
    <string name="enter_confirm_pass">Enter Confirm Password</string>
    <string name="password_unmatch">Password not matched</string>
    <string name="user_id">User ID</string>
    <string name="old_pass">Old Password</string>
    <string name="current_pass">Current Password</string>
    <string name="new_pass">New Password</string>
    <string name="confirm_pass">Confirm New Password</string>
    <string name="ls_sucess">Login Successfully</string>
    <string name="login_success">Please setup your child pickup point.</string>
    <string name="set_pickup_point">Set pickup point</string>
    <string name="setlocation">Set Location for</string>
    <string name="_continue">Continue</string>
    <string name="edit">Edit</string>

    <string name="ok">Ok</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="back">Back</string>

    <string name="select_bus_title">Select your bus</string>
    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>

    <string name="no_geocoder_available">No geocoder available</string>

    <string name="fetch_address">Address: B-69, Phase VII,. Industrial Focal Point,. SAS Nagar, MOHALI-. 160059. Phones : 0172-3246935.</string>

    <string name="address_found">Address found</string>
    <string name="bus_loc">Bus Location</string>

    <string name="no_address_found">Sorry, no address found</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="service_not_available">Sorry, the service is not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>


    <string name="sound">Sound</string>
    <string name="alarm">Alarm</string>
    <string name="clear_all">Clear All</string>
    <string name="change_pwd">Change Password</string>
    <string name="exit_alert">Exit Alert</string>


    <string name="school">School</string>
    <string name="my_location">My Location</string>
    <string name="estimated_time_of_arrival">Estimated Time of arrival </string>
    <!--Alert -->
    <string name="alert">Alert</string>
    <string name="confirmation">Confirmation</string>
    <string name="internet_alert_msg">Internet is not available .Please check your internet</string>
    <string name="location_alert_msg">Location is not enabled .Please enable your Location </string>
    <string name="logout_alert_msg">Are you want to logout ?</string>
    <string name="end_trip_alert_msg">Are you sure to end the trip ?</string>

    <string name="no_child_msg">No child for this route</string>
    <string name="trip_end_msg">Your trip successfully ended</string>
    <!--Driver -->
    <string name="msg_alert_bus_select">Are you want to select this bus for trip?</string>
    <string name="start_trip">Start\nTrip</string>


    <string name="tab1">Home</string>
    <string name="tab2">Settings</string>
    <string name="tab3">Notifications</string>


    <string name="alarm_setting">Alarm Setting</string>
    <string name="pickup_point_setting">Pickup Point Setting</string>
    <string name="update_profile">Update Profile</string>

    <string name="set_location_txt">Set location for </string>

    <string name="pickup_points">Pickup Points</string>


    <string name="fragment_actions_add">add fragment</string>
    <string name="fragment_actions_replace">replace fragment</string>
    <string name="fragment_actions_replace_with_animation">replace fragment with animation</string>


    <string name="number_picker_formatter">%d</string>
    <!--parent fragment screen-->
    <string name="tag_parent_home_screen">Home Screen</string>
    <string name="tag_parent_settings_screen">Settings Screen</string>
    <string name="tag_parent_notify_screen">Notification Screen</string>
    <string name="tag_parent_pass_change_screen">Password Change Screen</string>
    <string name="tag_pickup_points_screen">PickUp Point Screen</string>
    <string name="tag_alarm_screen">Parent Alarm Screen</string>
    <string name="autocomplete_hint">Search address here</string>

    <string name="no_bus_in_transit">No bus in transit</string>
</resources>
