<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item
        android:id="@+id/profile"
        android:icon="@android:drawable/ic_menu_info_details"
        android:showAsAction="always|withText"
        android:title="@string/profile" />

    <item
        android:id="@+id/notification"
        android:icon="@drawable/notification"
        android:showAsAction="always|withText"
        android:title="@string/notification" />

    <item
        android:id="@+id/settings"
        android:icon="@drawable/settings"
        android:showAsAction="always|withText"
        android:title="@string/settings" />

    <item
        android:id="@+id/logout"
        android:icon="@android:drawable/ic_lock_power_off"
        android:showAsAction="always|withText"
        android:title="@string/logout" />


</menu>