<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></include>


   <!-- <EditText
        android:id="@+id/input_userid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/rectangle_shape"
        android:drawableRight="@drawable/user_icon"
        android:hint="@string/user_id"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:padding="@dimen/_12sdp"
        android:textColor="@color/white"
        android:textColorHint="@color/hintcolor"
        android:visibility="gone" />-->

    <EditText
        android:id="@+id/input_old_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_below="@+id/toolbar"
        android:background="@drawable/rectangle_shape_trans"
        android:hint="@string/old_pass"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textSize="@dimen/_15sdp"
        android:padding="@dimen/_15sdp"
        android:textColor="@color/black"
        android:textColorHint="@color/transparent" />

    <EditText
        android:id="@+id/input_new_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_old_pass"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:background="@drawable/rectangle_shape_trans"

        android:hint="@string/new_pass"
        android:textSize="@dimen/_15sdp"
        android:inputType="textPassword"
        android:maxLines="1"
        android:padding="@dimen/_15sdp"
        android:textColor="@color/black"
        android:textColorHint="@color/transparent" />

    <EditText
        android:id="@+id/input_confirm_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_new_pass"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:background="@drawable/rectangle_shape_trans"
        android:hint="@string/confirm_pass"
        android:textSize="@dimen/_15sdp"
        android:inputType="textPassword"
        android:maxLines="1"
        android:padding="@dimen/_15sdp"
        android:textColor="@color/black"
        android:textColorHint="@color/transparent" />

    <Button
        android:id="@+id/btn_parent_save_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_confirm_pass"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:padding="@dimen/_10sdp"
        android:background="@drawable/login_button_shape"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sdp" />


</RelativeLayout>