<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"></include>

    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="@dimen/_20sdp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp">

            <LinearLayout
                android:id="@+id/login_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/_25sdp"
                android:layout_marginRight="@dimen/_25sdp"
                android:background="@drawable/left_side_round"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/_1sdp"
                android:visibility="gone">

                <Button
                    android:id="@+id/parentLogin"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.1"
                    android:background="@drawable/round_rectangle"
                    android:text="@string/parent"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13sdp" />

                <TextView
                    android:id="@+id/text_driver"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_weight=".9"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/driver"
                    android:textAllCaps="true"
                    android:textColor="@color/login"
                    android:textSize="@dimen/_13sdp" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/login_layout1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginLeft="@dimen/_25sdp"
                android:layout_marginRight="@dimen/_25sdp"
                android:background="@drawable/left_side_round"
                android:orientation="horizontal"
                android:paddingRight="@dimen/_1sdp"
                android:visibility="visible">

                <TextView
                    android:id="@+id/text_parent"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_weight=".9"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/parent"
                    android:textAllCaps="true"
                    android:textColor="@color/login"
                    android:textSize="@dimen/_13sdp" />

                <Button
                    android:id="@+id/driverLogin"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.1"
                    android:background="@drawable/round_rectangle"
                    android:text="@string/driver"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13sdp" />

            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp">

            <EditText
                android:id="@+id/input_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rectangle_shape"
                android:drawableRight="@drawable/user_icon"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="@dimen/_12sdp"
                android:text="gargvicky8899@gmail.com"
                android:textColor="@color/white"
                android:textColorHint="@color/hintcolor"
                android:textCursorDrawable="@null" />

            <EditText
                android:id="@+id/input_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rectangle_shape"
                android:drawableRight="@drawable/user_icon"
                android:hint="@string/phone"
                android:inputType="number"
                android:maxLength="10"
                android:maxLines="1"
                android:padding="@dimen/_12sdp"
                android:text="9646273517"
                android:textColor="@color/white"
                android:textColorHint="@color/hintcolor"
                android:textCursorDrawable="@null"
                android:visibility="gone" />
        </RelativeLayout>

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@drawable/rectangle_shape"
            android:drawableRight="@drawable/password_icon"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="@dimen/_12sdp"
            android:text="96597942"
            android:textColor="@color/white"
            android:textColorHint="@color/hintcolor"
            android:textCursorDrawable="@null" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@drawable/login_button_shape"
            android:paddingBottom="@dimen/_10sdp"
            android:paddingTop="@dimen/_10sdp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp">

            <TextView
                android:id="@+id/textForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/_3sdp"
                android:text="@string/forgot"
                android:textColor="@color/white"
                android:textSize="@dimen/_13sdp" />

        </RelativeLayout>
    </LinearLayout>


</RelativeLayout>