<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/ll_header">

        <LinearLayout
            android:id="@+id/ll_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/left_lyt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="@dimen/_10sdp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/school" />

                    <TextView
                        android:id="@+id/tv_school"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:text="@string/school"
                        android:textColor="@color/black"
                        android:textStyle="bold" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/bus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bus"
                    android:visibility="gone" />

                <com.readytoborad.customviews.SeekBarHint
                    android:id="@+id/seek_bar"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_80sdp"
                    android:layout_centerInParent="true"
                    android:layout_toLeftOf="@+id/right_lyt"
                    android:layout_toRightOf="@+id/left_lyt"
                    android:max="100"
                    android:paddingLeft="@dimen/_15sdp"
                    android:paddingRight="@dimen/_15sdp"
                    android:progress="0" />

                <SeekBar
                    android:id="@+id/progressbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:layout_toLeftOf="@+id/right_lyt"
                    android:layout_toRightOf="@+id/left_lyt"
                    android:max="100"
                    android:progress="0"
                    android:progressDrawable="@drawable/progress_drawable"
                    android:thumb="@drawable/thumb_drawable"
                    android:thumbOffset="@dimen/_10sdp"
                    android:visibility="gone" />

                <LinearLayout
                    android:id="@+id/right_lyt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="@dimen/_10sdp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/home" />

                    <TextView
                        android:id="@+id/tv_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:text="@string/my_location"
                        android:textColor="@color/black"
                        android:textStyle="bold" />
                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_main"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bus_loc"
                android:textColor="@color/login"
                android:textSize="@dimen/_16sdp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/bus" />

            <TextView
                android:id="@+id/child_location_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:gravity="center"
                android:text="@string/fetch_address"
                android:textColor="@color/black"
                android:textSize="@dimen/_18sdp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_center"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_40sdp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/estimated_time_of_arrival"
                android:textColor="@color/login"
                android:textSize="@dimen/_16sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="30 mins"
                android:textColor="@color/black"
                android:textSize="@dimen/_22sdp" />
        </LinearLayout>


    </RelativeLayout>

    <fragment
        android:id="@+id/map_parent_bus_home"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></fragment>

    <RelativeLayout
        android:id="@+id/transit_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:visibility="gone">

        <TextView
            android:id="@+id/transit_tex_tview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/no_bus_in_transit"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/iv_map"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="@dimen/_40sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:background="@drawable/alarm" />

    <LinearLayout
        android:id="@+id/ll_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <include layout="@layout/layout_toolbar" />

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/dashcolor"
            android:visibility="gone"></View>

        <LinearLayout
            android:id="@+id/ll_lyt"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/green_rectangle"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/btn_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_2sdp"
                android:layout_weight="1"
                android:background="@drawable/rectangle"
                android:text="Rahul"
                android:textColor="@color/white"
                android:visibility="gone" />

            <Button
                android:id="@+id/btn_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/_2sdp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="Rahul"
                android:textColor="@color/login"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>